transform doing correctlty mnovie card

--- a/index.html
+++ b/index.html
@@ -349,10 +349,17 @@
         <div class="footer-content">
             <div class="footer-section about">
                 <h2><img width="50px"  src="video-add-512.png" alt="">MovieFix</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut veniam ex quos hic id nobis beatae earum sapiente! Quod ipsa exercitationem officiis non error illum minima iusto et. Dolores, quibusdam?</p>
+                <p style="text-align: left; padding-left: 10px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut veniam ex quos hic id nobis beatae earum sapiente! </p>
+                <ul class="footer_list">
+                    <li><img style="width: 30px;" src="./communication_15047435.png" alt=""></li>
+                    <li><img style="width: 30px;" src="./instagram_3955024.png" alt=""></li>
+                    <li><img style="width: 30px;" src="./twitter_5969020.png" alt=""></li>
+                    
+                   
+                </ul>
             </div>
             <div class="footer-section links">
-                <h3>Cineflix</h3>
+                <h3>MovieFix</h3>
                 <ul>
                     <li><a href="#">About us</a></li>
                     <li><a href="#">My profile</a></li>
