--- a/index.html
+++ b/index.html
@@ -394,8 +394,9 @@
                    
                 
 
-                    <li><img style="width: 100px; height: 80px; border-radius: 10px;" src="Google_Play_Store.webp" alt=""></li>
-                    <li><img style="width: 100px; height: 80px; border-radius: 10px;" src="images.png" alt=""></li>
+                    <li><img style="width: 50px; height: 50px; border-radius: 10px;" src="./app-store_8633210.png" alt=""></li>
+                    <li><img style="width: 50px; height: 50px; border-radius: 10px;" src="playstore_888923.png" alt=""></li>
+                    <li><img style="width: 40px; height: 40px; border-radius: 10px;" src="./app-store_5977575.png" alt=""></li>
                 </ul>
             </div>
         </div>
